src/objects/ints__Yodlee_Transaction__c.object
<CustomObject>
    <description>Yodlee Transactions</description>
    <fields>
        <fullName>ints__Item_Account_Id__c</fullName>
        <label>Item Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Merchant_Name__c</fullName>
        <label>Merchant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Site_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Account</label>
        <referenceTo>ints__Site_Account__c</referenceTo>
        <relationshipLabel>Yodlee Transactions</relationshipLabel>
        <relationshipName>Yodlee_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ints__Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__Transaction_Base_Type__c</fullName>
        <label>Transaction Base Type</label>
        <picklist>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ints__Transaction_Category_Id__c</fullName>
        <label>Transaction Category Id</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Transaction_Category__c</fullName>
        <description>Genesis Category Types for a Transaction</description>
        <label>Transaction Category</label>
        <picklist>
            <picklistValues>
                <fullName>NSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ints__Transaction_Description__c</fullName>
        <label>Transaction Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Transaction_Id__c</fullName>
        <label>Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Transaction_Post_Date__c</fullName>
        <label>Transaction Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ints__Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ints__Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Yodlee_Call__c</fullName>
        <label>Yodlee Call</label>
        <referenceTo>ints__Yodlee_Call__c</referenceTo>
        <relationshipName>Yodlee_Bank_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Yodlee Transaction</label>
    <nameField>
        <label>Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Yodlee Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>